namespace ReceptServer.Domain;

public enum PrescriptionStatus
{
    Open = 0,
    Closed = 1
}
