// <auto-generated />
using System;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using ReceptServer.Infrastructure;

#nullable disable

namespace Infrastructure.Migrations
{
    [DbContext(typeof(ReceptDbContext))]
    partial class ReceptDbContextModelSnapshot : ModelSnapshot
    {
        protected override void BuildModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder.HasAnnotation("ProductVersion", "8.0.0");

            modelBuilder.Entity("ReceptServer.Domain.Clinic", b =>
                {
                    b.Property<Guid>("ClinicId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("TEXT");

                    b.Property<string>("Address")
                        .IsRequired()
                        .HasMaxLength(300)
                        .HasColumnType("TEXT");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasMaxLength(200)
                        .HasColumnType("TEXT");

                    b.Property<string>("ProviderNumber")
                        .IsRequired()
                        .HasMaxLength(32)
                        .HasColumnType("TEXT");

                    b.HasKey("ClinicId");

                    b.HasIndex("ProviderNumber")
                        .IsUnique();

                    b.ToTable("Clinics", (string)null);

                    b.HasData(
                        new
                        {
                            ClinicId = new Guid("d83b4c1a-5e2f-4b6a-9c8d-1e2f3a4b5c6d"),
                            Address = "Torvet 4, 8000 Aarhus C",
                            Name = "Lægehuset v/ Torvet",
                            ProviderNumber = "1001"
                        },
                        new
                        {
                            ClinicId = new Guid("a1b2c3d4-e5f6-4a5b-8c9d-0e1f2a3b4c5d"),
                            Address = "Park Allé 15, 8000 Aarhus C",
                            Name = "Citylægerne",
                            ProviderNumber = "1002"
                        },
                        new
                        {
                            ClinicId = new Guid("f1e2d3c4-b5a6-4978-9012-345678901234"),
                            Address = "Åboulevarden 30, 8000 Aarhus C",
                            Name = "Lægeklinikken Åboulevarden",
                            ProviderNumber = "1003"
                        });
                });

            modelBuilder.Entity("ReceptServer.Domain.MedicationOrder", b =>
                {
                    b.Property<Guid>("MedicationOrderId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("TEXT");

                    b.Property<int>("AllowedDispensations")
                        .HasColumnType("INTEGER");

                    b.Property<int>("DispensedCount")
                        .HasColumnType("INTEGER");

                    b.Property<string>("Dosage")
                        .IsRequired()
                        .HasMaxLength(200)
                        .HasColumnType("TEXT");

                    b.Property<string>("DrugName")
                        .IsRequired()
                        .HasMaxLength(200)
                        .HasColumnType("TEXT");

                    b.Property<Guid>("PrescriptionId")
                        .HasColumnType("TEXT");

                    b.HasKey("MedicationOrderId");

                    b.HasIndex("PrescriptionId");

                    b.ToTable("MedicationOrders", (string)null);

                    b.HasData(
                        new
                        {
                            MedicationOrderId = new Guid("d1d1d1d1-1212-3434-5656-787878787878"),
                            AllowedDispensations = 5,
                            DispensedCount = 1,
                            Dosage = "1g x 4 dagligt",
                            DrugName = "Panodil",
                            PrescriptionId = new Guid("b0a0a0a0-b0b0-c0c0-d0d0-e0e0e0e0e0e0")
                        },
                        new
                        {
                            MedicationOrderId = new Guid("e2e2e2e2-2323-4545-6767-898989898989"),
                            AllowedDispensations = 3,
                            DispensedCount = 0,
                            Dosage = "400mg ved smerter",
                            DrugName = "Ibuprofen",
                            PrescriptionId = new Guid("f0f0f0f0-1010-2020-3030-404040404040")
                        },
                        new
                        {
                            MedicationOrderId = new Guid("f3f3f3f3-3434-5656-7878-909090909090"),
                            AllowedDispensations = 1,
                            DispensedCount = 0,
                            Dosage = "1 tablet x 3 i 7 dage",
                            DrugName = "Penicillin",
                            PrescriptionId = new Guid("f0f0f0f0-1010-2020-3030-404040404040")
                        },
                        new
                        {
                            MedicationOrderId = new Guid("a4a4a4a4-4545-6767-8989-010101010101"),
                            AllowedDispensations = 10,
                            DispensedCount = 2,
                            Dosage = "50mg morgen",
                            DrugName = "Metoprolol",
                            PrescriptionId = new Guid("a0a0a0a0-1111-2222-3333-444444444444")
                        },
                        new
                        {
                            MedicationOrderId = new Guid("b5b5b5b5-5656-7878-9090-121212121212"),
                            AllowedDispensations = 12,
                            DispensedCount = 3,
                            Dosage = "efter skema",
                            DrugName = "Insulin Novorapid",
                            PrescriptionId = new Guid("c0c0c0c0-5555-6666-7777-888888888888")
                        });
                });

            modelBuilder.Entity("ReceptServer.Domain.Pharmacy", b =>
                {
                    b.Property<Guid>("PharmacyId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("TEXT");

                    b.Property<string>("Address")
                        .IsRequired()
                        .HasMaxLength(300)
                        .HasColumnType("TEXT");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasMaxLength(200)
                        .HasColumnType("TEXT");

                    b.HasKey("PharmacyId");

                    b.ToTable("Pharmacies", (string)null);

                    b.HasData(
                        new
                        {
                            PharmacyId = new Guid("45a1b2c3-d4e5-4f6a-8b9c-0d1e2f3a4b5c"),
                            Address = "Store Torv 5, 8000 Aarhus C",
                            Name = "Aarhus Løve Apotek"
                        },
                        new
                        {
                            PharmacyId = new Guid("67b8c9d0-e1f2-4a3b-5c6d-7e8f9a0b1c2d"),
                            Address = "Viby Ringvej 10, 8260 Viby J",
                            Name = "Viby Apotek"
                        },
                        new
                        {
                            PharmacyId = new Guid("12c3d4e5-f6a7-4b8c-9d0e-1f2a3b4c5d6e"),
                            Address = "Nordre Strandvej 40, 8240 Risskov",
                            Name = "Risskov Apotek"
                        });
                });

            modelBuilder.Entity("ReceptServer.Domain.Prescription", b =>
                {
                    b.Property<Guid>("PrescriptionId")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("TEXT");

                    b.Property<Guid?>("AssignedPharmacyId")
                        .HasColumnType("TEXT");

                    b.Property<Guid>("ClinicId")
                        .HasColumnType("TEXT");

                    b.Property<DateTime?>("ClosedAt")
                        .HasColumnType("TEXT");

                    b.Property<DateTime>("CreatedAt")
                        .HasColumnType("TEXT");

                    b.Property<int>("Status")
                        .HasColumnType("INTEGER");

                    b.HasKey("PrescriptionId");

                    b.ToTable("Prescriptions", (string)null);

                    b.HasData(
                        new
                        {
                            PrescriptionId = new Guid("b0a0a0a0-b0b0-c0c0-d0d0-e0e0e0e0e0e0"),
                            AssignedPharmacyId = new Guid("45a1b2c3-d4e5-4f6a-8b9c-0d1e2f3a4b5c"),
                            ClinicId = new Guid("d83b4c1a-5e2f-4b6a-9c8d-1e2f3a4b5c6d"),
                            CreatedAt = new DateTime(2024, 1, 15, 10, 30, 0, 0, DateTimeKind.Utc),
                            Status = 0
                        },
                        new
                        {
                            PrescriptionId = new Guid("f0f0f0f0-1010-2020-3030-404040404040"),
                            ClinicId = new Guid("a1b2c3d4-e5f6-4a5b-8c9d-0e1f2a3b4c5d"),
                            CreatedAt = new DateTime(2024, 2, 20, 14, 15, 0, 0, DateTimeKind.Utc),
                            Status = 0
                        },
                        new
                        {
                            PrescriptionId = new Guid("a0a0a0a0-1111-2222-3333-444444444444"),
                            ClinicId = new Guid("f1e2d3c4-b5a6-4978-9012-345678901234"),
                            CreatedAt = new DateTime(2021, 5, 10, 9, 0, 0, 0, DateTimeKind.Utc),
                            Status = 0
                        },
                        new
                        {
                            PrescriptionId = new Guid("c0c0c0c0-5555-6666-7777-888888888888"),
                            AssignedPharmacyId = new Guid("67b8c9d0-e1f2-4a3b-5c6d-7e8f9a0b1c2d"),
                            ClinicId = new Guid("d83b4c1a-5e2f-4b6a-9c8d-1e2f3a4b5c6d"),
                            CreatedAt = new DateTime(2024, 3, 5, 11, 45, 0, 0, DateTimeKind.Utc),
                            Status = 0
                        });
                });

            modelBuilder.Entity("ReceptServer.Domain.MedicationOrder", b =>
                {
                    b.HasOne("ReceptServer.Domain.Prescription", null)
                        .WithMany("MedicationOrders")
                        .HasForeignKey("PrescriptionId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();
                });

            modelBuilder.Entity("ReceptServer.Domain.Prescription", b =>
                {
                    b.OwnsOne("ReceptServer.Domain.Patient", "Patient", b1 =>
                        {
                            b1.Property<Guid>("PrescriptionId")
                                .HasColumnType("TEXT");

                            b1.Property<string>("CprNumber")
                                .IsRequired()
                                .HasMaxLength(10)
                                .HasColumnType("TEXT")
                                .HasColumnName("PatientCprNumber");

                            b1.Property<string>("FullName")
                                .IsRequired()
                                .HasMaxLength(200)
                                .HasColumnType("TEXT")
                                .HasColumnName("PatientFullName");

                            b1.HasKey("PrescriptionId");

                            b1.ToTable("Prescriptions");

                            b1.WithOwner()
                                .HasForeignKey("PrescriptionId");

                            b1.HasData(
                                new
                                {
                                    PrescriptionId = new Guid("b0a0a0a0-b0b0-c0c0-d0d0-e0e0e0e0e0e0"),
                                    CprNumber = "1205851234",
                                    FullName = "Sofie Madsen"
                                },
                                new
                                {
                                    PrescriptionId = new Guid("f0f0f0f0-1010-2020-3030-404040404040"),
                                    CprNumber = "2408905678",
                                    FullName = "Lars Nielsen"
                                },
                                new
                                {
                                    PrescriptionId = new Guid("a0a0a0a0-1111-2222-3333-444444444444"),
                                    CprNumber = "0101409999",
                                    FullName = "Gerda Olesen"
                                },
                                new
                                {
                                    PrescriptionId = new Guid("c0c0c0c0-5555-6666-7777-888888888888"),
                                    CprNumber = "1506758888",
                                    FullName = "Henrik Poulsen"
                                });
                        });

                    b.Navigation("Patient")
                        .IsRequired();
                });

            modelBuilder.Entity("ReceptServer.Domain.Prescription", b =>
                {
                    b.Navigation("MedicationOrders");
                });
#pragma warning restore 612, 618
        }
    }
}
